feat: add aria hidden to social icons,add container alignment

--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
           <ul class="social-list">
             <li>
               <a href="#" aria-label="Go to Facebook">
-                <svg class="icon">
+                <svg class="icon" aria-hidden="true">
                   <use href="./assets/icons/social-icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="#" aria-label="Go to Twitter">
-                <svg class="icon">
+                <svg class="icon" aria-hidden="true">
                   <use href="./assets/icons/social-icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="#" aria-label="Go to Instagram">
-                <svg class="icon">
+                <svg class="icon" aria-hidden="true">
                   <use href="./assets/icons/social-icons.svg#icon-instagram"></use>
                 </svg>
               </a>
