--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
           <section class="intro-content">
             <h1 class="intro-title">Build The Community Your Fans Will Love</h1>
             <p class="intro-description">Huddle re-imagines the way we build communities. You have a voice, but so does
-              your audience.
-              Create connections with your users as you engage in genuine discussion.</p>
+              your audience. Create connections with your users as you engage in genuine discussion.</p>
             <a class="intro-btn" href="#">Register</a>
           </section>
         </section>
@@ -44,21 +43,21 @@
         <nav class="social-nav">
           <ul class="social-list">
             <li>
-              <a href="#" aria-label="Go to Facebook">
+              <a class="social-link" href="#" aria-label="Go to Facebook">
                 <svg class="icon" aria-hidden="true">
                   <use href="./assets/icons/social-icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="#" aria-label="Go to Twitter">
+              <a class="social-link" href="#" aria-label="Go to Twitter">
                 <svg class="icon" aria-hidden="true">
                   <use href="./assets/icons/social-icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="#" aria-label="Go to Instagram">
+              <a class="social-link" href="#" aria-label="Go to Instagram">
                 <svg class="icon" aria-hidden="true">
                   <use href="./assets/icons/social-icons.svg#icon-instagram"></use>
                 </svg>
