fix: fix layout

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="page-container">
-    <header>
+    <header class="header">
       <div class="container">
         <a href="#" class="logo">
           <img class="logo-img" src="./assets/images/logo.svg" alt="Huddle logo">
@@ -27,18 +27,18 @@
         <section class="intro">
           <div class="img-container">
             <img class="intro-img" src="./assets/images/illustration-mockups.svg"
-              alt="Desktop and mobile mockups illustrations">
+              alt="Desktop and mobile illustration mockups" fetchpriority="high">
           </div>
-          <section class="intro-content">
+          <div class="intro-content">
             <h1 class="intro-title">Build The Community Your Fans Will Love</h1>
             <p class="intro-description">Huddle re-imagines the way we build communities. You have a voice, but so does
               your audience. Create connections with your users as you engage in genuine discussion.</p>
             <a class="intro-btn" href="#">Register</a>
-          </section>
+          </div>
         </section>
       </div>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="container">
         <nav class="social-nav">
           <ul class="social-list">
